# diablo-access

./: ANDROID_ACCESSIBILITY_QUICKSTART.md  ANDROID_BUILD_AND_PLAY.md  ARCHITECTURE.md  BUILD_STATUS.md  INTEGRATION.md  WAIT_INSTRUCTIONS.md  build-android.bat  diablo-installer.ps1
.claude/: settings.local.json
.github/workflows/: Android.yml
Source/: CMakeLists.txt
Source/platform/android/: CMakeLists.txt
Source/utils/: android_accessibility.cpp  android_accessibility.hpp  screen_reader.cpp
android-project/: build.gradle  gradle.properties
android-project/app/src/main/java/org/diasurgical/devilutionx/: AccessibilityManager.kt  AndroidTextToSpeech.kt  GestureDetector.kt
